[gd_scene load_steps=15 format=3 uid="uid://cn883yl1idrqi"]

[ext_resource type="Script" path="res://Scenes/UI/player_inventory/playerInventory.gd" id="1_2qa4f"]
[ext_resource type="Texture2D" uid="uid://dc4dycw3yacuq" path="res://Assets/Graphics/UI/black_transparent_background.png" id="2_cabu8"]
[ext_resource type="PackedScene" uid="uid://b68snod1f4o33" path="res://Scenes/UI/inventory/items/items.tscn" id="2_md8qx"]
[ext_resource type="Script" path="res://Scenes/UI/container_UI/hideScrollBars.gd" id="3_uovdi"]
[ext_resource type="Texture2D" uid="uid://kun1dvs60lgi" path="res://Assets/Graphics/UI/close_button.png" id="5_7aq1a"]
[ext_resource type="FontFile" uid="uid://b8kxc2chawiw1" path="res://Assets/Fonts/mainFont.ttf" id="6_x7x1g"]
[ext_resource type="Texture2D" uid="uid://dhwariysia2hg" path="res://Assets/Graphics/UI/inspectionBox.png" id="7_i61eu"]
[ext_resource type="Texture2D" uid="uid://b7jaj4n0bhf5a" path="res://Assets/Graphics/UI/inspectionBox2.png" id="8_ajclj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7sg7m"]
atlas = ExtResource("5_7aq1a")
region = Rect2(9, 11, 21, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhdj0"]
atlas = ExtResource("5_7aq1a")
region = Rect2(49, 11, 21, 20)

[sub_resource type="Animation" id="Animation_kby1x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_14ns7"]
resource_name = "fade"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8yd8w"]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gc3es"]
_data = {
"RESET": SubResource("Animation_kby1x"),
"fade": SubResource("Animation_14ns7"),
"fade_out": SubResource("Animation_8yd8w")
}

[node name="playerInventory" type="Control" groups=["UI", "player_inv"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_2qa4f")
item = ExtResource("2_md8qx")
metadata/_edit_use_anchors_ = true

[node name="background" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(581.5, 324)
scale = Vector2(1179, 676)
texture = ExtResource("2_cabu8")

[node name="object" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(358, 326)
scale = Vector2(3, 3)

[node name="closeButton" type="TouchScreenButton" parent="."]
texture_filter = 1
position = Vector2(927, 119.625)
scale = Vector2(1.5, 1.5)
texture_normal = SubResource("AtlasTexture_7sg7m")
texture_pressed = SubResource("AtlasTexture_uhdj0")

[node name="inventoryContainer" type="ScrollContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 58.0
offset_top = 140.0
offset_right = 371.0
offset_bottom = -203.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
script = ExtResource("3_uovdi")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="inventoryContainer"]
layout_mode = 2
theme_override_constants/separation = 9
alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gc3es")
}
autoplay = "fade"

[node name="emptyTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 707.345
offset_top = 252.395
offset_right = 1084.35
offset_bottom = 299.395
theme_override_fonts/normal_font = ExtResource("6_x7x1g")
theme_override_font_sizes/normal_font_size = 25
text = "KEY0_uiText0"

[node name="InspectionBox" type="Sprite2D" parent="."]
position = Vector2(403.83, 323.135)
texture = ExtResource("7_i61eu")

[node name="InspectionBox2" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(403.83, 323.135)
texture = ExtResource("8_ajclj")

[node name="inspectionZone" type="Control" parent="." groups=["inspectionZone"]]
anchors_preset = 0
offset_left = 199.0
offset_top = 66.0
offset_right = 606.0
offset_bottom = 648.5
metadata/_edit_group_ = true

[node name="inspectionButton" type="Button" parent="."]
layout_mode = 0
offset_left = 663.74
offset_top = 476.0
offset_right = 775.74
offset_bottom = 507.0
theme_override_fonts/font = ExtResource("6_x7x1g")
theme_override_font_sizes/font_size = 22
text = "Inspeccionar"

[node name="useButton" type="Button" parent="."]
layout_mode = 0
offset_left = 795.83
offset_top = 476.0
offset_right = 907.83
offset_bottom = 507.0
theme_override_fonts/font = ExtResource("6_x7x1g")
theme_override_font_sizes/font_size = 22
text = "Usar           "

[connection signal="released" from="closeButton" to="." method="_on_close_button_released"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="button_up" from="inspectionButton" to="." method="_on_inspection_button_button_up"]
[connection signal="button_up" from="useButton" to="." method="_on_use_button_button_up"]
